--- a/Quizmaster/game/game.css
+++ b/Quizmaster/game/game.css
@@ -33,7 +33,6 @@
 .btn{
     width: 10%; 
     height: 10%;
-    border-radius: 250px;
     background-color: transparent;
 }
 #game{
@@ -69,7 +68,7 @@
     box-shadow: 0 0.4rem 1.4rem 0 #00368c ;
     transform: translateY(-00.1rem);
     transition: transform  150ms;
-    border-radius: 1.5rem;    
+    border-radius:0 1.5rem 1.5rem 0;     
 }
 
 
@@ -96,4 +95,5 @@
     border-radius: 8px;
     
 }
+
 
