--- a/Quizmaster/game/game.css
+++ b/Quizmaster/game/game.css
@@ -68,7 +68,21 @@
     box-shadow: 0 0.4rem 1.4rem 0 #00368c ;
     transform: translateY(-00.1rem);
     transition: transform  150ms;
-    border-radius:0 1.5rem 1.5rem 0;     
+    border-radius:0 1.5rem 1.5rem 0;    
+}
+.correct{
+    box-shadow: 0 0.4rem 1.4rem 0 #08ff35 ;
+    transform: translateY(-00.1rem);
+    transition: transform  150ms;
+    border-radius:0 1.5rem 1.5rem 0;  
+        
+}
+.incorrect{
+    box-shadow: 0 0.4rem 1.4rem 0 #8c0000 ;
+    transform: translateY(-00.1rem);
+    transition: transform  150ms;
+    border-radius:0 1.5rem 1.5rem 0;  
+   
 }
 
 
